colour contrast issue fixed

--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -22,8 +22,8 @@ $cyan: #6cb2eb;
 $sidemenu-width: 300px;
 $sidemenu-color: #EEEEEE;
 $sidemenu-color-active: #E0E0E0;
-$sidemenu-color-text: #2E7D32;
-$sidemenu-color-text-active: #1B5E20;
+$sidemenu-color-text: #007a08;
+$sidemenu-color-text-active: #007a08;
 
 // Context sensitive help
 
